Revision history for XML-Grammar-Fiction.

0.1.0       Mon Apr 26 19:25:55 IDT 2010
        - Merged in the XML-Grammar-Screenplay into this module.
        - Converted XML-Grammar-Screenplay to a non-procedurally-recursive
        parser.
        - Created some base classes:
            - lib/XML/Grammar/Fiction/FromProto/Parser/LineIterator.pm
            - lib/XML/Grammar/Fiction/FromProto/Parser/XmlIterator.pm
            - lib/XML/Grammar/FictionBase/TagsTree2XML.pm
        - Made XML-Grammar-Screenplay use some of the XML-Grammar-Fiction
        classes instead of having duplicate copies.
        - Add the TODO file.

0.0.4       Sat Mar 13 00:28:52 IST 2010
        - Implemented better error handling and presentation in 
        ::App::FromProto.
            - making use of Exception-Class-based classes.
        - Removed the DOCTYPE from the DocBook/XML output (it was a DocBook
        4-ism).

0.0.3       Fri Nov 27 11:32:05 IST 2009
        - Add the script contrib/docbook-to-fiction-xml-txt.pl .
        - Add delimiting empty lines to a =begin ... =end block to settle
        some versions of t/pod.t
            - Thanks to SREZIC.

0.0.2       Wed Nov 25 11:55:41 IST 2009
        - Various refactorings / code cleanup:
            - removed old methods.
            - got rid of the _with_curr_line() anti-abstrcation.
            - converted the parsing exceptions to Exception-Class 
            ( see lib/XML/Grammar/Fiction/Err.pm )
            - Extract the Struct/Tag.pm helper class.
            - extracted the lib/XML/Grammar/Fiction/RendererBase.pm
            and lib/XML/Grammar/Fiction/RNG_Renderer.pm base classes.
            - Convert the proto-text parser (::Parser::QnD) to a 
            non-procedurally recursive one and extracted many methods from it.

0.0.1       Thu Nov  5 18:59:27 IST 2009
        - Forked from XML-Grammar-Screenplay-0.0600+trunk.
        - Changed to the Fiction proto-text format and XML format.